--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@ var passarinho;
 
 
 function preload() {
+    //carrega a imagem de fundo de tela
     this.load.image('bg', 'assets/bg_space.png');
+    //carrega o sprite do passarinho
     this.load.spritesheet('bird', 'assets/bird-purple.png', { frameWidth: 75, frameHeight: 75});
 }
 
