console log explicacao

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ function update() {
         passarinho.ida = true;
     }
     if (passarinho.x < 700 && passarinho.ida == true) {
-        console.log("O passarinho passa a olhar e se movimentar para a direita.");
+        console.log("O passarinho passa a se movimentar para a direita.");
         passarinho.x += 5;
     }
     if (passarinho.x == 700) {
@@ -74,7 +74,7 @@ function update() {
         passarinho.ida = false;
     }
     if (passarinho.x > 100 && passarinho.ida == false) {
-        console.log("O passarinho passa a olhar e se movimentar para a esquerda.")
+        console.log("O passarinho passa a se movimentar para a esquerda.")
         passarinho.x -= 5;
     }
     if (passarinho.y == 50){
