--- a/index.html
+++ b/index.html
@@ -39,16 +39,21 @@ var passarinho;
 
 
 function preload() {
-    //carrega a imagem de fundo de tela
+    //Carrega a imagem de fundo de tela
     this.load.image('bg', 'assets/bg_space.png');
-    //carrega o sprite do passarinho
+    //Carrega o sprite do passarinho
     this.load.spritesheet('bird', 'assets/bird-purple.png', { frameWidth: 75, frameHeight: 75});
 }
 
 function create() {
+    //Cria a imagem de fundo de tela
     this.add.image(400, 300, 'bg').setScale(1.2);
-    passarinho = this.add.sprite(100, 50, 'bird').setScale(1.3);
 
+    //Cria o sprite do passarinho
+    passarinho = this.add.sprite(100, 100, 'bird').setScale(1.3);
+
+    //Define os frames dentro do 'bird' que compõem a animação 'fly'
+    //Define o que é 'fly'
     this.anims.create({
         key: 'fly',
         frames: this.anims.generateFrameNumbers('bird', { start: 0, end: 7 }),
@@ -56,38 +61,54 @@ function create() {
         repeat: -1
     })
 
+    //Da 'play' nos frames 'fly' do sprite
+    //Torna 'fly' true
     passarinho.anims.play('fly', true)
 
 }
 
 function update() { 
+    //Quando a posicao do passarinho é igual a 100, muda a orientação da sprite 'passarinho'
+    //Transforma a variável passarinho.ida em true
     if (passarinho.x === 100) {
         passarinho.setFlip(false, false);
         passarinho.ida = true;
     }
+    //Adiciona 10 no posicao do passarinho
+    //movimento para direita
     if (passarinho.x < 700 && passarinho.ida == true) {
         console.log("O passarinho passa a se movimentar para a direita.");
-        passarinho.x += 5;
+        passarinho.x += 10;
     }
+    //Quando a posicao do passarinho é igual a 100, muda a orientação da sprite 'passarinho'
+    //Transforma a variável passarinho.ida em true
     if (passarinho.x === 700) {
         passarinho.setFlip(true, false);
         passarinho.ida = false;
     }
+    //Adiciona 10 no posicao do passarinho
+    //movimento para esquerda
     if (passarinho.x > 100 && passarinho.ida == false) {
         console.log("O passarinho passa a se movimentar para a esquerda.")
-        passarinho.x -= 5;
+        passarinho.x -= 10;
     }
-    if (passarinho.y === 50){
+    //define passarinho como descendo
+    if (passarinho.y === 100){
         passarinho.sobe = false
     }
-    if (passarinho.y >= 50 && passarinho.sobe == false) {
-        passarinho.y += 5;
+    //Faz passarinho descer, adicionando 
+    //movimento para baixo
+    if (passarinho.y >= 100 && passarinho.sobe == false) {
+        passarinho.y += 10;
     }
-    if (passarinho.y === 550){
+    //define passarinho como subindo
+    if (passarinho.y === 600){
         passarinho.sobe = true
     }
-    if (passarinho.y <= 550 && passarinho.sobe == true) {
-        passarinho.y -= 5;
+    //Faz passarinho subir, subtraindo
+    //movimento para cima
+    if (passarinho.y <= 600 && passarinho.sobe == true) {
+        passarinho.y -= 10;
     }
 }
 
