--- a/index.html
+++ b/index.html
@@ -67,10 +67,12 @@ function create() {
 
 }
 
+//definição da variavel loopwhile, como sendo = 0
 let loopwhile = 0;
 
 function update() { 
-
+    //While loop que imprime 1 + loopwhile
+    //Depois de imprimir 1+loopwhile, adiciona 2 a loopwhile
     while (loopwhile < 500) {
         console.log(1+loopwhile);
         loopwhile += 2;
